[package]
name = "hexpm"
version = "3.3.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2024"

readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/gleam-lang/hexpm-rust"
description = "A Rust client for the Hex package manager"
keywords = ["erlang", "gleam", "elixir", "hex", "api-client"]
categories = ["api-bindings"]

[dependencies]
# Derive Error trait
thiserror = "1.0"
# JSON (de)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP types
url = "2.2"
http = "1.0"
# Complex static values
lazy_static = "1.4"
# Text parsing with regular expressions
regex = "1.3"
# Byte collections
bytes = "1"
# gzip (de)compression
flate2 = "1.0"
# RSA signature and SHA256 checksum verification
ring = "0.17"
# PEM -> DER conversion
x509-parser = "0.15"
# Pubgrub dependency resolution algorithm
pubgrub = "0.2"
# Basic auth HTTP helper
http-auth-basic = "0.3"
# base16 encoding
base16 = { version = "0.2", features = ["alloc"] }
# Protobuf runtime
prost = "0.13.5"

[dev-dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# HTTP mock server
mockito = "1.4"
# Async runtime
tokio = { version = "1", features = ["full"] }
# toml encoding
toml = "0.8"

[build-dependencies]
# Protobuf codegen
prost-build = "0.13.5"
