[package]
name = "gleam"
version = "1.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2021"
license-file = "LICENCE"

[dependencies]
# The pure compiler
gleam-core = { path = "../compiler-core" }
# OS SIGINT and SIGTERM signal handling
ctrlc = { version = "3.2.1", features = ["termination"] }
# Command line interface
clap = { version = "4.5.4", features = ["derive"] }
# Recursively traversing directories
ignore = "0.4.22"
# Allow user to type in sensitive information without showing it in the shell
rpassword = "7.3.1"
# Async runtime
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread"] }
# Further file system functions (i.e. copy directory)
fs_extra = "1.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Checksums
sha2 = "0.10.8"
# Getting hostname
hostname = "0.3.1"
# TOML parser/editor that preserves comments & formatting
toml_edit = "0.9"
# File locking
fslock = "0.2.1"
# Provides a way to determine if two files are the same using filesystem node ids
same-file = "1.0.6"
# Open generated docs in browser
opener = "0.7"
camino = { workspace = true, features = ["serde1"] }
async-trait.workspace = true
base16.workspace = true
bytes.workspace = true
debug-ignore.workspace = true
ecow.workspace = true
flate2.workspace = true
futures.workspace = true
hexpm.workspace = true
http.workspace = true
im.workspace = true
itertools.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tar.workspace = true
termcolor.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
# Creation of temporary directories
tempfile = "3.2.0"
pretty_assertions.workspace = true

[build-dependencies]
# For statically linking the VCRuntime on Windows when
# using the MSVC toolchain
static_vcruntime = "2.0.0"
