[package]
name = "gleam-wasm"
version = "1.0.0-rc2"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2021"
license-file = "LICENCE"

[lib]
# This package compiles to wasm
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gleam-core = { path = "../compiler-core" }
hexpm = "2.1.0"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tracing-wasm = "*"
tracing = "*"
termcolor = "1.1.2"
camino = "1.1.6"
# Immutable data structures
im = "15.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
