[package]
name = "gleam-wasm"
version = "1.0.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2021"
license-file = "LICENCE"

[lib]
# This package compiles to wasm
crate-type = ["cdylib", "rlib"]

[dependencies]
gleam-core = { path = "../compiler-core" }
console_error_panic_hook = "0.1.7"
hexpm.workspace = true
itertools.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tracing-wasm = "*"
tracing.workspace = true
termcolor.workspace = true
camino.workspace = true
im.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
