# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Gleam contributors

[package]
name = "erlang-term-format"
authors = ["Louis Pilfold <louis@lpil.uk>"]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
