[package]
name = "gleam"
version = "0.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2018"

[dependencies]
# Command line interface
clap = "2"
structopt = "0.2"
# Immutable data structures
im = "12"
# Extra iter methods
itertools = "0.7"
# String case conversion
heck = "0.3"
# Parsing
lalrpop-util = "0.16"
regex = "0.2.1"
# Graph data structures
petgraph = "0.4"
# Pretty error messages
codespan = "0.2"
codespan-reporting = "0.2.1"
termcolor = "1.0.4"


[build-dependencies]
lalrpop = "0.16"

[dev-dependencies]
pretty_assertions = "0.5"
