[package]
name = "gleam"
version = "0.5.0-dev"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2018"

[dependencies]
# Command line interface
clap = "2"
structopt = "0.3"
# Immutable data structures
im = "12"
# Extra iter methods
itertools = "0.7"
# String case conversion
heck = "0.3"
# Parsing
lalrpop-util = "0.16"
regex = "1.1"
# Graph data structures
petgraph = "0.4"
# Pretty error messages
codespan = "0.3"
codespan-reporting = "0.3"
termcolor = "1.0.4"
# Initialize complex static values at runtime
lazy_static = "1.3"
# toml parsing
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
# Levenshtein string distance for typo suggestions
strsim = "0.9"
# Recursively traversing directories
walkdir = "2"


[build-dependencies]
lalrpop = "0.17"

[dev-dependencies]
pretty_assertions = "0.6"
