[package]
name = "gleam-language-server"
version = "1.14.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2024"
license-file = "LICENCE"

[dependencies]
gleam-core = { path = "../compiler-core" }

camino.workspace = true
debug-ignore.workspace = true
ecow.workspace = true
hexpm.workspace = true
im.workspace = true
itertools.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
strum.workspace = true
vec1.workspace = true
serde.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
