[package]
name = "test-echo-output"
version = "1.5.0"
authors = [
    "Louis Pilfold <louis@lpil.uk>",
    "Giacomo Cavalieri <giacomo.cavalieri@icloud.com>",
]
edition = "2021"
license = "Apache-2.0"

[dependencies]
gleam-core = { path = "../compiler-core" }
test-helpers-rs = { path = "../test-helpers-rs" }
toml.workspace = true
im.workspace = true
itertools.workspace = true
walkdir.workspace = true
regex.workspace = true
camino.workspace = true

[dev-dependencies]
insta.workspace = true
