[package]
name = "test-helpers-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
gleam-core = { path = "../compiler-core" }
toml.workspace = true
im.workspace = true
itertools.workspace = true
walkdir.workspace = true
regex.workspace = true
camino.workspace = true

[dev-dependencies]
insta.workspace = true
