[package]
name = "test-package-compiler"
version = "1.3.0-rc1"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2021"
license-file = "LICENCE"

[dependencies]
gleam-core = { path = "../compiler-core" }
toml.workspace = true
im.workspace = true
itertools.workspace = true
walkdir.workspace = true
regex.workspace = true
camino.workspace = true

[dev-dependencies]
insta.workspace = true

