[package]
name = "test-package-compiler"
version = "1.11.1"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2024"
license = "Apache-2.0"

[dependencies]
gleam-core = { path = "../compiler-core" }
test-helpers-rs = { path = "../test-helpers-rs" }
toml.workspace = true
im.workspace = true
itertools.workspace = true
regex.workspace = true
camino.workspace = true

[dev-dependencies]
insta.workspace = true
